<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--

    <data>

    <variable
        name="data"
        type="com.example.cryptotracker.data.models.Data" />

</data>

-->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/coinIcon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/coinSymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:text="BTC"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/coinDivider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:text="|" />

                    <TextView
                        android:id="@+id/coinName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:text="Bitcoin" />

                    <TextView
                        android:id="@+id/dollarSign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:text="$" />

                    <TextView
                        android:id="@+id/coinPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/price_usd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/oneHourText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/OneHour" />

                    <TextView
                        android:id="@+id/percentChange1hText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="8dp"
                        tools:text="@string/OneHourPercentage"
                         />

                    <TextView
                        android:id="@+id/twentyFourHoursText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/TwentyFourHour" />

                    <TextView
                        android:id="@+id/percentChange24hText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="8dp"
                        tools:text="@string/TwentyFourHourPercentage" />

                    <TextView
                        android:id="@+id/daysText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/SevenDays" />

                    <TextView
                        android:id="@+id/percentChange7dayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="8dp"
                        tools:text="@string/SevenDayPercentage" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

    </layout>